--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -7,3 +7,14 @@
 @using Microsoft.JSInterop
 @using Journal_Entry
 @using Journal_Entry.Components
+@using System
+@using System.Collections.Generic
+@using System.Linq
+@using System.Threading.Tasks
+@using Microsoft.AspNetCore.Components
+@using Journal_Entry.Components.Models    
+@using Journal_Entry.Components.Services  
+@using Microsoft.Data.Sqlite
+@using Dapper
+@using Markdig
+
